--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
     tags-ignore:
       - 'v*.*.*'
 
+env:
+  FASTLY_SERVICE_ID: ${{ secrets.FASTLY_SERVICE_ID }}
+  FASTLY_API_TOKEN: ${{ secrets.FASTLY_API_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
